# mega-brain

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.example.json  .npmignore  .pkce_verifier  00-PRODUCTION-START-HERE.md  CLAUDE.md  CONTRIBUTING.md  CONVERSION_PATH_ANALYSIS.json  CRO-REPORT-2026-03-08.md  DASHBOARD-FIX-REPORT.md  DASHBOARD-REAL-TIME-2026-03-08.html  DEPLOYMENT-SUMMARY.md  Dockerfile  Dockerfile 2  ETL-SCHEMA-DESIGN.md  JARVIS-AUTO-ACTIVATION-SETUP.md  JARVIS-INSTALLATION-COMPLETE.txt  JARVIS-INSTALLATION-GUIDE.md  LICENSE  MANUAL-GESTOR-MERCADO-LIVRE.md  MERCADOLIVRE_DATA_2026-03-08.json  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  QUICK-START.md  README-PRODUCTION-DEPLOYMENT.md  README.md  SITE-UPDATE-STATUS.md  SYNC-AIOX-UPSTREAM.md  SYNC-STATUS.md  UPSTREAM-MANIFEST.yaml  api_real_data.json  authorize-ml.sh  biome.json  check-vendas-v2.py  ci_fetch_dashboard.py  (+31 more)
.antigravity/: README.md
.antigravity/rules/: jarvis-context.md  mega-brain.md
.bilhon/: README.md
.bilhon/jarvis/: IMPORT.md
.bilhon/mission-control/: IMPORT.md
.claude/: CLAUDE-LITE.md  CLAUDE.md  SKILL-WHITELIST.json  agents.yaml  settings.example.json  settings.json
.claude/agents/: orquestrador-global--capability-cartographer.md  orquestrador-global--dag-architect.md  orquestrador-global--intent-parser.md  orquestrador-global--roteador.md  orquestrador-global--supervisor-sistema.md
.cursor/: agents.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  layer-rules.yaml  layer1-allowlist.txt  layer2-manifest.txt  layer3-manifest.txt
.planning/: 2026-03-04-intelligence-restructure-voice-fingerprinting.md  LAYER-PLAN.md  PROJECT.md
.windsurf/: agents.yaml
SCRIPTS/: ralph-cascateamento.sh
agents/: AGENT-INDEX.yaml  MASTER-AGENT.md  persona-registry.yaml
core/: PIPELINE-ARCHITECTURE-DECISION.md  paths.py
docs/: API-KEYS-GUIDE.md  CONTRIBUTING.md  DEVOPS-AUDIT-LAYER-SYSTEM.md  LAYERS.md  MCP-MERCADOLIVRE-INTEGRATION 2.md  MCP-MERCADOLIVRE-INTEGRATION.md  QUICK-START.md  api-keys-guide.md  index.html  jarvis-logging-protocol.md  pipeline-completa-v4.md  quick-start.md  readme-ralph-cascateamento.md
docs-riaworks/: file-inventory.json
frontend/: DEVELOPER-SETUP-COMPLETE.md  GIT-COMMIT-TEMPLATE.md  next.config.js
integrations/: README.md
logs/: README.md
public/: dashboard-data.json
reference/: CODE-STANDARDS.md  CONSELHO.md  DEPTH-SEEKING-PROTOCOL.md  DIRECTORY-CONTRACT.md  LAYERS.md  MEGABRAIN-3D-ARCHITECTURE.md  ONBOARDING-GUIDE.md  TECH-STACK.md  VERIFICATION-LEVELS.md  security-layer-test.md
research/: MEGA-BRAIN-RAIO-X-COMPLETO.md
scripts/: agents-recommend.js  build-agent-routing-index.js  consolidate_pipeline_outputs.py  ingest-with-entity-discovery.py
system/: 03-JARVIS-DNA.yaml  HOME.md
tests/: test_ml_orders.py
(+2444 files in other folders)
